--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     database: portabilis_challenge_production
     username: portabilis_challenge
     password: <%= ENV["PORTABILIS_CHALLENGE_DATABASE_PASSWORD"] %>
